--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,4 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://victorrodriguesti:<db_password>@raspay.gcouf.mongodb.net/raspay?retryWrites=true&w=majority&appName=raspay
+      uri: mongodb+srv://victorrodriguesti:2ZdLwHyg2RONs8HS@raspay.gcouf.mongodb.net/raspay?retryWrites=true&w=majority&appName=raspay
