criando controller e recurso de consulta a custumer e produto e criação. e utilizando derived query

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://victorrodriguesti:2ZdLwHyg2RONs8HS@raspay.gcouf.mongodb.net/raspay?retryWrites=true&w=majority&appName=raspay
+  webFlux:
+    base-path: /raspay-api
